--- a/2020-08-19/building-a-waitlist-for-plum-mail/index.html
+++ b/2020-08-19/building-a-waitlist-for-plum-mail/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>plum mail</title>
+  <title>Building a waitlist for plum mail</title>
   <meta name="description" content="Building a waitlist for plummail.co">
   <meta name="keywords" content="communication, collaboration, email, messaging">
 
@@ -31,7 +31,7 @@
   </header>
   <main class="article">
     <h1>Building a waitlist for plum mail</h1>
-    <img src="screenshot.png" alt="screenshot of plum mail">
+    <img src="screenshot.png" alt="screenshot of plum mail" style="max-width:100%;">
     <p>
       I have recently started working on a new project,
       to build a sucessor to email and chat.
@@ -57,7 +57,7 @@
       <p>features you&#39;ve described so far look really cool and useful, especially being able to select email text and pin it. Please count me in and add me to the waitlist
         Love the fact you can use markdown when composing messages</p>
     </blockquote>
-    <p>As our video demonstrated several features we are yet to implement, this allowed us to see which features people are most excited about. Knowing what excits someone allows us to start a conversation with them when we get them on the platform
+    <p>As <a href="https://www.youtube.com/watch?v=Yf-82ychDgA">our video</a> demonstrated several features we are yet to implement, this allowed us to see which features people are most excited about. Knowing what excits someone allows us to start a conversation with them when we get them on the platform
       that starts from the features they&#39;re are most excited about.</p>
     <p>Some people mentioned features/integrations that we had not shown.</p>
     <blockquote>
