--- a/2020-06-23/introducing-lean-server-for-midas/index.html
+++ b/2020-06-23/introducing-lean-server-for-midas/index.html
@@ -49,7 +49,7 @@
       <p>
         In my opinion Ace was successful in its goals.
         However, having all these features in one server increased the implementation complexity.
-        Since starting Ace I have written several service that use the same narrow subset of features.
+        Since starting Ace I have written several services that use the same narrow subset of features.
         These applications were mostly JSON API services, they did not have streaming.
         Being deployed behind a load balancer, they needed neither HTTPS or HTTP/2.
       </p>
