--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <meta name="author" content="Peter Saxton">
 
   <link rel="stylesheet" href="assets/site.css" media="screen" title="no title" charset="utf-8">
+  <script async defer data-domain="crowdhailer.me" src="https://plausible.io/js/plausible.js"></script>
+
   <style media="screen">
     ol.updates {
       list-style: none;
       padding: 0;
     }
-    ol.updates a {
-      font-size: 130%;
-    }
     ol.updates h3 {
-      font-weight: bold;
+      font-size: inherit;
       float: left;
       width: 71%;
       padding-top: 0.5em;
