--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <nav>
       <a href="https://github.com/CrowdHailer">Github</a>,
       <a href="https://twitter.com/CrowdHailer">Twitter</a>,
-      Works at <a href="http://trykno.com">trykno.com</a>.
+      Works at <a href="http://plummail.co">plummail.co</a>.
     </nav>
   </header>
   <section style="padding:0;">
