jekyll on the home page

--- a/index.html
+++ b/index.html
@@ -1,50 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <title>Peter Saxton</title>
-
-  <meta name="description" content="Distributed programming, judicious use of DevOps and advancing the Web, Some thoughts and opinions from Peter Saxton">
-  <meta name="author" content="Peter Saxton">
-
-  <link rel="stylesheet" href="assets/site.css" media="screen" title="no title" charset="utf-8">
-  <script async defer data-domain="crowdhailer.me" src="https://plausible.io/js/plausible.js"></script>
-
-  <style media="screen">
-    ol.updates {
-      list-style: none;
-      padding: 0;
-    }
-    ol.updates h3 {
-      font-size: inherit;
-      float: left;
-      width: 71%;
-      padding-top: 0.5em;
-      padding-bottom: 0.5em;
-    }
-    ol.updates aside {
-      font-family: monospace;
-      text-align: right;
-
-      float: left;
-      width: 29%;
-      opacity: 0.6;
-      padding-top: 0.5em;
-      padding-bottom: 0.5em;
-      letter-spacing: -0.05em;
-    }
-
-    .clearfix:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-  </style>
-</head>
-<body>
+---
+layout: default
+---
   <header>
     <h1>Peter Saxton</h1>
     <nav>
@@ -213,46 +169,3 @@
   <section style="padding:0;">
     <hr>
   </section>
-  <section>
-    <h2>Tagline</h2>
-    <p>
-      Creator of Raxx; Elixir addict and open source evangelist.
-    </p>
-    <h2>Short Bio</h2>
-    <p>
-      Working with Elixir everyday at paywithcurl.com, and loving it.
-      Discovered Elixir after using Python, JavaScript, Ruby and Scala.
-      Before programming was conducting research into quantum optics.
-    </p>
-    <p>
-      Believes that message passing is a great way to think about distributed systems.
-      Nowadays developing Raxx with the goal of extending message passing beyond the BEAM.
-    </p>
-    <hr>
-    <p>
-      I have an Master of Physics (MPhys) from Oxford and started a Phd in Scotland following some travelling.
-      I found the Phd was not well suited to me and I left to find faster feedback in the real world.
-      An intense introduction to Ruby on the Makers Academy 3 month coding course was the change of direction I needed.
-    </p>
-    <p>
-      I haven't looked back.
-      I freelanced immediately after graduating Makers, working on projects involving Ruby, JavaScript and Elixir.
-      Recently I have been working at a proptech start-up as a senior developer, this time with Scala.
-    </p>
-    <p>
-      A regular participant in hacknights and meet-ups in London I am always learning something new.
-      I am keen to share my latest insights and have written and presented on the topic of Domain Driven Design.
-      Currently I am enjoying seeing how DDD concepts merge with the rigor of functional languages.
-    </p>
-    <p>
-      My primary aim is to become a software craftsman and to build the future of the web.
-    </p>
-    <p>
-      Outside of programming, I enjoy surfing, Terry Pratchett and Dartmoor.
-    </p>
-  </section>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/index.html" class="edit-page-link">Edit this page</a>
-  </footer>
-</body>
-</html>
