layout on most recent post

--- a/2020-08-19/building-a-waitlist-for-plum-mail/index.html
+++ b/2020-08-19/building-a-waitlist-for-plum-mail/index.html
@@ -1,29 +1,12 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+title: Building a waitlist for Plum Mail
+abstract: How we validated our approach to building an email replacement by starting a waiting list.
+share_image: https://plummail.co/share.png
+share_video: https://youtu.be/Yf-82ychDgA
+share_alt: Screenshot of Plum Mail in action
+---
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Building a waitlist for plum mail</title>
-  <meta name="description" content="Building a waitlist for plummail.co">
-  <meta name="keywords" content="communication, collaboration, email, messaging">
-
-  <meta name="author" content="Peter Saxton">
-
-  <meta property="og:title" content="plum mail - Better Conversations">
-  <meta property="og:description" content="plum mail is a messaging platform that helps organise your thoughts and protects you from distractions.">
-  <meta property="og:image" content="https://plummail.co/share.png">
-  <meta property="og:url" content="https://plummail.co">
-  <meta property="og:video" content="https://youtu.be/Yf-82ychDgA">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="plum mail - Better Conversations">
-  <meta name="twitter:image:alt" content="screenshot of DID.app homepage">
-
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-</head>
-
-<body>
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -79,8 +62,3 @@
       sign up than 100 who would never use it again.</p>
     <p>Do you think this approach would work for your product?</p>
   </main>
-  <footer>
-  </footer>
-</body>
-
-</html>
