fix share image link

--- a/2020-08-19/building-a-waitlist-for-plum-mail/index.html
+++ b/2020-08-19/building-a-waitlist-for-plum-mail/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Building a waitlist for Plum Mail
 abstract: How we validated our approach to building an email replacement by starting a waiting list.
-share_image: https://plummail.co/share.png
+share_image: https://plummail.co/images/share.png
 share_video: https://youtu.be/Yf-82ychDgA
 share_alt: Screenshot of Plum Mail in action
 ---
@@ -17,7 +17,7 @@ share_alt: Screenshot of Plum Mail in action
     <img src="screenshot.png" alt="screenshot of plum mail" style="max-width:100%;">
     <p>
       I have recently started working on a new project,
-      to build a sucessor to email and chat.
+      to build a successor to email and chat.
       A way of communicating that is more organised than email and less distracting than chat applications.
     </p>
     <p>Yesterday we launched plum mail on <a href="https://www.producthunt.com/posts/plum-mail/">product hunt</a>. We got some great support from IH, thank you.</p>
