more pages cleaned up

--- a/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html
+++ b/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Raxx.Kit Lean mean web development for Elixir</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-    <meta name="author" content="Peter Saxton">
+---
+layout: default
+title: Raxx.Kit Lean mean web development for Elixir
+abstract: A powerful, focused and extensible toolkit for web development in Elixir
+share_image: /2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/raxx-issues.png
+share_alt: Open issues on on Raxx
+---
 
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -35,8 +33,3 @@
         <a href="https://www.youtube.com/watch?v=5YYpVJHA0sw">Video</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
