--- a/2020-06-23/introducing-lean-server-for-midas/index.html
+++ b/2020-06-23/introducing-lean-server-for-midas/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Introducing Lean Server for Midas</title>
+  ---
+  layout: default
+  title: Introducing Lean Server for Midas
+  abstract: Building a web server in Gleam for the Midas framework
+  ---
 
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-    <link href="/assets/prism.css" rel="stylesheet" />
-    <meta name="author" content="Peter Saxton">
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -99,9 +92,3 @@
         <li>With Erlang and Rebar3. <a href="https://github.com/midas-framework/midas#start-in-an-erlang-application">See the docs</a>.</li>
       </ul>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2020-06-23/introducing-lean-server-for-midas/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-    <script src="/assets/prism.js"></script>
-  </body>
-</html>
