update dated blogs

--- a/2018-01-17/simple-web-services-with-ace/index.html
+++ b/2018-01-17/simple-web-services-with-ace/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Simple web services with Ace + Elixir</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: Simple web services with Ace + Elixir
+---
+
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -266,9 +260,3 @@
       </li>
     </ul>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-01-17/simple-web-services-with-ace/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
