--- a/2018-02-18/git-status-for-elixir-builds/index.html
+++ b/2018-02-18/git-status-for-elixir-builds/index.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Git status for Elixir builds</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: Git status for Elixir builds
+---
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -101,9 +94,3 @@
       end
     </code></pre>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-02-18/git-status-for-elixir-builds/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
