--- a/2018-02-23/http-is-message-passing/index.html
+++ b/2018-02-23/http-is-message-passing/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HTTP is message passing</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: HTTP is message passing
+abstract: Why I think Plug is not idiomatic Elixir (or erlang) for writing web applications
+---
+
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -127,9 +122,3 @@
       If you want to find out more the best thing is to ask on the <a href="https://elixirforum.com/">Elixir Forum</a> or chat to us in the <a href="https://elixir-lang.slack.com/messages/C56H3TBH8/">#raxx slack channel</a>.
     </p>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-02-23/http-is-message-passing/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
