--- a/2018-03-02/raxx-refined-web-development/index.html
+++ b/2018-03-02/raxx-refined-web-development/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Raxx - refined web development</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
+---
+layout: default
+title: Raxx - refined web development
+abstract: Talk explaining the Raxx web framework
+share_image: 2018-03-02/raxx-refined-web-development/introducing-raxx-elixir-london.png
+share_video: http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx
+share_alt: Photo of me at Elixir Daze
+---
 
-    <meta name="description" content="Introducing the Raxx web framework for Elixir">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
