--- a/2018-05-01/building-a-distributed-chatroom-with-raxx-kit/index.html
+++ b/2018-05-01/building-a-distributed-chatroom-with-raxx-kit/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Building a distributed chatroom with Raxx.Kit</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: Building a distributed chatroom with Raxx.Kit
+abstract: Walk through building a distributed chat room with Raxx, an Elixir web toolkit.
+share_image: /2018-05-01/building-a-distributed-chatroom-with-raxx-kit/raxx_kit_welcome.png
+share_alt: Screenshot of new Raxx.Kit project
+---
+
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -351,9 +348,3 @@
       Any questions, ask on the <a href="https://elixirforum.com/">Elixir Forum</a> or chat in the <a href="https://elixir-lang.slack.com/messages/C56H3TBH8/">#raxx slack channel</a>.
     </p>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-05-01/a-distributed-chatroom-with-raxx-kit/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
