--- a/2018-05-31/raxx-refined-web-development/index.html
+++ b/2018-05-31/raxx-refined-web-development/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Raxx - refined web development</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
+---
+layout: default
+title: Raxx - refined web development
+abstract: Talk explaining the Raxx web framework
+share_image: https://codesync.global/uploads/media/theme/0001/01/16d70351e4ef837c6fbab1a10e1576a862092484.jpeg
+share_video: https://www.youtube.com/watch?v=nk3RpnsVKO8
+share_alt: Code Sync global colors
+---
 
-    <meta name="description" content="Introducing the Raxx web framework for Elixir">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -37,8 +34,3 @@
         <a href="https://www.youtube.com/watch?v=nk3RpnsVKO8">Video</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-05-31/raxx-refined-web-development/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
