--- a/2018-08-16/mind-your-own-business-view-controller/index.html
+++ b/2018-08-16/mind-your-own-business-view-controller/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Mind your own business View Controller</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
+---
+layout: default
+title: Mind your own business View Controller
+abstract: Talk at Elixir London 2018 exploring when and when not to use MVC.
+share_image: /2018-08-16/mind-your-own-business-view-controller/hexagonal-architecture.png
+share_video: https://www.youtube.com/watch?v=ukMFwZtY3m0
+share_alt: Diagram of Hexagonal architecture pattern
+---
 
-    <meta name="description" content="In this talk Peter will review some ideas for designing software. Ask what separation of concerns really means">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -17,7 +14,7 @@
     </header>
     <main class="article">
       <h1>Mind your own business View Controller</h1>
-      <a href="https://www.youtube.com/watch?v=ukMFwZtY3m0&index=14&list=PLvL2NEhYV4Zu4zxnZXtCSOCvsUHtxTYIl">
+      <a href="https://www.youtube.com/watch?v=ukMFwZtY3m0">
         <img src="facepalms.jpg" alt="Row of emoji facepalms" style="max-width:100%;">
       </a>
       <p>
@@ -37,5 +34,3 @@
     <footer>
       <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-08-16/mind-your-own-business-view-controller/index.html" class="edit-page-link">Edit this page</a>
     </footer>
-  </body>
-</html>
