--- a/2018-08-26/errors-are-not-exceptional/index.html
+++ b/2018-08-26/errors-are-not-exceptional/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Errors are not exceptional</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: Errors are not exceptional
+abstract: Bad input happens all the time in our programs, how do we separate dealing with this from genuine errors.
+---
+
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -158,9 +153,3 @@
       This is why it does not capture exceptions, it only works on explicit errors returned as tuples.
     </p>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-08-26/error-are-not-exceptional/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
