--- a/2018-11-04/introducing-genbrowser/index.html
+++ b/2018-11-04/introducing-genbrowser/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Introducing GenBrowser</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: Introducing GenBrowser
+abstract: GenBrowser enables browsers to send and receive messages like an Elixir process.
+---
+
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -238,9 +233,3 @@
       Joining a topic gives permission to send messages on that topic, additional checks for messages sent can be added by implementing the <a href="https://hexdocs.pm/phoenix/Phoenix.Channel.html#module-incoming-events">appropriate callbacks</a>.
     </p>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-08-26/error-are-not-exceptional/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
