--- a/2018-11-08/message-passing-for-actors-and-humans/index.html
+++ b/2018-11-08/message-passing-for-actors-and-humans/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Message passing for actors and humans</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-    <meta name="author" content="Peter Saxton">
+---
+layout: default
+title: Message passing for actors and humans
+abstract: Talk exploring extending the actor model beyond the server.
+share_image: /images/client-server-model-diagram.png
+share_video: https://www.youtube.com/watch?v=4tyWBZkkCfI&t=11s
+share_alt: Diagram of server to client interactions
+---
 
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -16,7 +15,7 @@
     <main class="article">
       <h1>Message passing for actors and humans</h1>
       <a href="#">
-        <img src="/images/client-server-model-diagram.png" alt="Row of emoji facepalms" style="max-width:100%;">
+        <img src="/images/client-server-model-diagram.png" alt="Diagram of server to client interactions" style="max-width:100%;">
       </a>
       <p>
         Elixir, and Erlang, implement an elegant model of message passing.
@@ -34,8 +33,3 @@
         <a href="https://www.youtube.com/watch?v=4tyWBZkkCfI&t=11s">Video</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-11-08/message-passing-for-actors-and-humans/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
