--- a/2019-02-08/using-raxx-view-in-plug-applications/index.html
+++ b/2019-02-08/using-raxx-view-in-plug-applications/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Using Raxx.View in Plug applications</title>
-  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="/assets/prism.css" rel="stylesheet" />
-</head>
-<body>
+---
+layout: default
+title: Using Raxx.View in Plug applications
+abstract: Use Raxx.View and EExHTML as the view layer in Plug and Phoenix applications.
+---
+
   <header>
     <nav style="text-align:right">
       <a href="/">Home</a>
@@ -135,9 +130,3 @@
       Get in touch via <a href="https://twitter.com/CrowdHailer">twitter</a> or <a href="https://elixir-lang.slack.com/messages/C56H3TBH8/details/?">slack</a>
     </p>
   </main>
-  <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-08-26/error-are-not-exceptional/index.html" class="edit-page-link">Improve this page</a>
-  </footer>
-  <script src="/assets/prism.js"></script>
-</body>
-</html>
