--- a/curriculum-vitae/index.html
+++ b/curriculum-vitae/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Curriculum Vitae: Peter Saxton</title>
+
+    <script async defer data-domain="crowdhailer.me" src="https://plausible.io/js/plausible.js"></script>
     <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
 
     <style media="screen">
