update old talks to template

--- a/talks/2017-03-29/building-a-webserver-in-elixir/index.html
+++ b/talks/2017-03-29/building-a-webserver-in-elixir/index.html
@@ -1,3 +1,11 @@
+---
+layout: default
+title: Building a webserver in Elixir
+abstract: Using erlang processes and Elixir to build a webserver
+share_image: talks/2017-03-29/building-a-webserver-in-elixir/ace_step_1.png
+share_video: https://skillsmatter.com/skillscasts/10033-building-a-webserver-in-elixir
+share_alt: Diagram of process architecture in web server
+---
 <!DOCTYPE html>
 <html>
   <head>
