--- a/talks/2017-04-26/web-without-the-framework/index.html
+++ b/talks/2017-04-26/web-without-the-framework/index.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Web without the framework</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
+---
+layout: default
+title: Web without the framework
+share_video: https://skillsmatter.com/skillscasts/10174-building-for-the-web-without-a-framework-peter-saxton
+---
 
-    <meta name="description" content="Web without the framework">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -34,8 +28,3 @@
         <a href="https://skillsmatter.com/skillscasts/10174-building-for-the-web-without-a-framework-peter-saxton">Video</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/talks/2017-04-26/web-without-the-framework" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
