--- a/talks/2017-05-04/tokumei-on-the-web/index.html
+++ b/talks/2017-05-04/tokumei-on-the-web/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tokumei, on the web</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
+---
+layout: default
+title: Tokumei, on the web
+share_image: /talks/2017-05-04/tokumei-on-the-web/screenshot.png
+share_video: https://youtu.be/engXVCCk9bg?t=14m41s
+share_alt: Photo of Peter presenting this talk
+---
 
-    <meta name="description" content="Introducing Tokumei the alternative Elixir web framework">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -29,8 +25,3 @@
         <a href="https://youtu.be/engXVCCk9bg?t=14m41s">Video</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/talks/2017-05-04/tokumei-on-the-web/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
