--- a/talks/2017-08-17/working-with-http2-in-elixir/index.html
+++ b/talks/2017-08-17/working-with-http2-in-elixir/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Working with HTTP/2 in Elixir</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-
-    <meta name="description" content="How to implement the HTTP/2 protocol using Elixir">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
+---
+layout: default
+title: Working with HTTP/2 in Elixir
+abstract: Talk explaining HTTP/2 support in Ace, an Elixir web server.
+share_image: /talks/2017-08-17/working-with-http2-in-elixir/talk-profile.jpeg
+share_video: https://youtu.be/Yf-82ychDgA
+share_alt: Conference image for this talk
+---
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
