--- a/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html
+++ b/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html
@@ -1,3 +1,11 @@
+---
+layout: default
+title: Live coded chat app in 45 minutes
+abstract: How we validated our approach to building an email replacement by starting a waiting list.
+share_image: /talks/2017-10-31/live-coded-chat-app-in-45-minutes/docker-cloud-screenshot.png
+share_video: https://skillsmatter.com/skillscasts/11072-elixir-london-october
+share_alt: Screenshot of Docker Cloud dashboard
+---
 <!DOCTYPE html>
 <html>
   <head>
@@ -39,8 +47,3 @@
         <a href="https://skillsmatter.com/skillscasts/11072-elixir-london-october">Video</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/talks/2017-10-31/live-coded-chat-app-in-45-minutes/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
