--- a/talks/2017-11-17/all-chat-applications-lesson-2/index.html
+++ b/talks/2017-11-17/all-chat-applications-lesson-2/index.html
@@ -1,3 +1,11 @@
+---
+layout: default
+title: All chat applications; lesson 2
+abstract: Elixir is a powerful tool. In just 15 minutes you can have an acceptable chat application. Here endeth the blog post, but wait you have more questions.
+share_image: /talks/2017-11-17/all-chat-applications-lesson-2/so-hot.jpg
+share_video: https://www.youtube.com/embed/JEXT-qaeeyg
+share_alt: So hot
+---
 <!DOCTYPE html>
 <html>
   <head>
