--- a/talks/2017-07-10/elixir-processes-for-a-rubyist/index.html
+++ b/talks/2017-07-10/elixir-processes-for-a-rubyist/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Elixir processes for a Rubyist</title>
-    <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
+---
+layout: default
+title: Elixir processes for a Rubyist
+abstract: Talk explaining Elixir processes from a Ruby mindset.
+share_image: /talks/2017-07-10/elixir-processes-for-a-rubyist/ace_step_1.png
+share_video: https://skillsmatter.com/skillscasts/10486-building-a-webserver-in-elixir
+share_alt: Diagram of process architecture.
+---
 
-    <meta name="description" content="Using erlang processes and Elixir to build a webserver, for a Ruby audience">
-    <meta name="author" content="Peter Saxton">
-
-  </head>
-  <body>
     <header>
       <nav style="text-align:right">
         <a href="/">Home</a>
@@ -33,8 +30,3 @@
         <a href="https://github.com/CrowdHailer/Ace">Source</a>
       </p>
     </main>
-    <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/talks/2017-07-10/elixir-processes-for-a-rubyist/index.html" class="edit-page-link">Edit this page</a>
-    </footer>
-  </body>
-</html>
